dev-helm/vault/ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  annotations: 
    #cert-manager.io/issuer: "letsencrypt-prod"
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: kong
  tls:
  - hosts:
    - vault.hossam.io
    secretName: vault-ingress-tls
  rules:
  - host: vault.hossam.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
